# cs-map-generator

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  continuous-improvement-inputs.json  settings.json
.claude/agents/: backend__coder__java.agent.md  backend__coder__python.agent.md  backend__documenter.agent.md  backend__orchestrator.agent.md  backend__test.agent.md  common__acceptance-test-writer.agent.md  common__agent-maintainer.agent.md  common__auditor.agent.md  common__continuous-improvement-writer.agent.md  common__feature-card-creator.agent.md  common__feature-splitter.agent.md  common__git.agent.md  common__planner.agent.md  common__project-analyser.agent.md  common__test__pact.agent.md  common__test__wiremock.agent.md  frontend__coder__react.agent.md  frontend__components-initiator.agent.md  frontend__documenter.agent.md  frontend__orchestrator.agent.md  frontend__project-initiator__react.agent.md  frontend__prototyper__react.agent.md  frontend__test.agent.md  gis__architect.agent.md
.claude/instructions/: accessibility.instructions.md  backend.instructions.md  continuous-improvement-payload.template.json  frontend-architecture.instructions.md  frontend-bootstrap.templates.md  frontend-project-structure.templates.md  frontend-styling.instructions.md  frontend-testing-conventions.instructions.md  frontend__devcontainer.template.json  frontend__gitignore.template.md  i18n.instructions.md  install-agents.sh  playwright-acceptance.instructions.md  question-intake.instructions.md  typescript.instructions.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
data/: README.md
data/output/montreal-cs2/: manifest.json
data/output/quebec-cs2/: manifest.json
docs/: ARCHITECTURE.md  cs2-road-importer-plan.md
docs/adr/: 0001-pipeline-architecture.md  0002-cs2-export-format.md  0003-center-coordinate-input.md  0004-srtm-source-strategy.md  0005-water-mask-and-carving.md
src/cs_mapgen/: __init__.py
src/cs_mapgen/application/: __init__.py  extent_resolver.py  pipeline.py  ports.py  stage.py
src/cs_mapgen/config/: __init__.py  settings.py
tests/: _fakes.py  conftest.py
tests/application/: test_condition_terrain_stage.py  test_extent_resolver.py  test_ingest_water_stage.py  test_pipeline.py  test_prepare_water_stage.py  test_quantize_heightmap_stage.py  test_stage_context.py
tests/domain/: test_geometry.py  test_raster.py  test_target_specs.py  test_water.py
tests/fixtures/: README.md  tiny_bbox.json
tests/golden/: test_full_pipeline_determinism.py
tests/infrastructure/: test_coastline_reconstruction.py  test_filesystem_artifact_store.py  test_geojson_encoder.py  test_osmnx_water_source_cache.py  test_png_helpers.py  test_srtm_source_cache.py
tests/interfaces/: test_cli.py  test_http.py
(+48 files in other folders)
