[project]
name = "cs-mapgen"
version = "0.1.0"
description = "Deterministic GIS compiler: real-world bbox to Cities: Skylines 1 / 2 map artifacts."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "cs2_map_generator contributors" }]
keywords = ["gis", "cities-skylines", "heightmap", "procedural", "osm", "srtm"]

dependencies = [
    "numpy~=2.1",
    "scipy~=1.14",
    "pillow~=11.0",
    "pydantic~=2.9",
    "pydantic-settings~=2.6",
    "typer~=0.13",
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    "httpx~=0.27",
    "structlog~=24.4",
]

[project.optional-dependencies]
gis = [
    "rasterio~=1.4",
    "geopandas~=1.0",
    "shapely~=2.0",
    "pyproj~=3.7",
    "osmnx~=2.1",
    "networkx~=3.4",
    "scikit-image~=0.24",
]

[project.scripts]
cs-mapgen = "cs_mapgen.interfaces.cli.app:main"

[dependency-groups]
dev = [
    "ruff~=0.7",
    "mypy~=1.13",
    "types-Pillow",
]
test = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "coverage~=7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs_mapgen"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplify
    "RUF",      # ruff-specific
    "N",        # pep8-naming
    "TID",      # tidy imports
    "PL",       # pylint subset
    "PT",       # pytest style
]
ignore = [
    "PLR0913",  # too many arguments — domain dataclasses legitimately have many fields
    "PLR2004",  # magic value in tests is acceptable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["osmnx.*", "rasterio.*", "geopandas.*", "shapely.*", "pyproj.*", "skimage.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "golden: end-to-end pipeline determinism test",
    "requires_gis: needs the optional `gis` dependency group installed",
]

[tool.coverage.run]
source = ["src/cs_mapgen"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
